Улучшила структуру, пофиксила недочеты